...
                    .padding(vertical = 8.dp),
                colors = ButtonDefaults.buttonColors(
                    containerColor = TimberOrange,
                    contentColor = Color.Black
                )
            ) {
                Text("Add Exercise")
            }
        }
    }
}


...
    modifier: Modifier = Modifier
) {
    var isConfirming by remember { mutableStateOf(false) }

    val clickedColor = Color(0xFFe86c6c)
    val containerColor = if (isConfirming) clickedColor else Color.Transparent
    val text = if (isConfirming) "Are you sure?" else "Discard Workout"

    TextButton(
        onClick = {
            if (isConfirming) {
                onConfirmDiscard()
            } else {
...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(8.dp)
    ) {
        OutlinedTextField(
            value = if (workoutSet.weight == 0.0 && workoutSet.reps == 0) "" else workoutSet.weight.toString(),
            onValueChange = onWeightChange,
            label = { Text("Weight") },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
            modifier = Modifier.weight(1f),
            singleLine = true,
            placeholder = { Text("kg/lbs") }
        )
        OutlinedTextField(
            value = if (workoutSet.weight == 0.0 && workoutSet.reps == 0) "" else workoutSet.reps.toString(),
            onValueChange = onRepsChange,
            label = { Text("Reps") },
            keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
            modifier = Modifier.weight(1f),
            singleLine = true
        )
        Checkbox(
            checked = workoutSet.isDone,
...
