...
    val contentDescription: String,
    val route: String
)

private val BottomBarDefaultItems = listOf(
    BottomNavItem("Stats", Icons.Outlined.BarChart, "Statistics and analytics", AppDestinations.STATS_ROUTE),
    BottomNavItem("History", Icons.Outlined.History, "Workout history", AppDestinations.HISTORY_ROUTE),
    BottomNavItem("Workout", Icons.Outlined.FitnessCenter, "Workout now", AppDestinations.WORKOUT_ROUTE),
    BottomNavItem("Templates", Icons.Outlined.AddBox, "Workout templates", AppDestinations.TEMPLATES_ROUTE),
    BottomNavItem("Settings", Icons.Outlined.Settings, "Settings", AppDestinations.SETTINGS_ROUTE)
)

@Composable
fun TimberBottomNavigationBar(
    currentRoute: String?,
    onItemSelected: (String) -> Unit,
...
