...
    modifier: Modifier = Modifier
) {
    var isConfirming by remember { mutableStateOf(false) }

    val clickedColor = TimberTheme.customColors.success
    val containerColor = if (isConfirming) clickedColor else Color.Transparent
    val text = if (isConfirming) "Are you sure?" else "Complete workout"

    TextButton(
        onClick = {
            if (isConfirming) {
                onFinishWorkout()
            } else {
...
